<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Schladming GeoExplorer</string>
    <string name="hello_world">Hello world!</string>
    <string name="ok">OK</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_choose_player">Choose player</string>
    <string name="intent_key_stop_main_activity">stop_main_activity</string>
    <string name="intent_key_photo_location">photo_location</string>
    <string name="intent_key_proximity">proximity</string>
    <string name="first_time_welcome_text">Welcome to Schladming GeoExplorer!\n \nSchladming GeoExplorer is a pervasive game of exploration and fun! Given a photograph, your objective is to explore your surroundings and find the depicted location.\n \nYou can also add your own locations, using your device\'s camera to take photographs.\n \nWhile playing Schladming GeoExplorer, you should be aware that your GPS coordinates will be sent over an insecure connection to a central server. If you do not want others to be able to see your GPS coordinates, you should now back out. By pressing OK below, you accept this.\n \nHave fun!</string>
    <string name="main_menu_explore">Go exploring</string>
    <string name="main_menu_add_location">Add a location</string>
    <string name="main_menu_about">About</string>
    <string name="explore_location_location">Location: </string>
    <string name="explore_location_already_found">You have found this location!</string>
    <string name="explore_location_added_by_user">You added this location.</string>
    <string name="explore_location_i_am_here">I think I\'m here</string>
    <string name="explore_location_report">Report picture</string>
    <string name="location_found_well_done">Well done!\nYou found this location!</string>
    <string name="location_found_not_close">Nope!\nNot even close!\n \nRemember: It may be that your GPS is not functioning correctly at the moment. If you truly believe you are here, try again later.</string>
    <string name="location_found_close">Almost there!\nClose but no cigar!</string>
    <string name="report_location_what_is_wrong">What is wrong with this picture?</string>
    <string name="report_location_explicit">It contains explicit content</string>
    <string name="report_location_impossible">It is impossible to find</string>
    <string name="location_reported_thank_you">Thank you for reporting this picture. Your requested will be tended to as soon as possible.</string>
    <string name="location_reported_continue_exploring">Continue exploring</string>
    <string name="add_location_take_photo">Take a photo</string>
    <string name="add_location_add_location">Add location</string>
    <string name="add_location_enter_name">Enter location name</string>
    <string name="about_text">GeoExplorer was made in 2014 for the Experimedia Student Competition 2014: Design for Schladming.\n \nThis application was developed by Fabian Sörensson, Felix Hallqvist and Victor Nithander. Feel free to send an e-mail to me\@sfabian.net for any questions.</string>
    <string name="location_added_thank_you">Thank you for adding the location!</string>
    <string name="terms_text">By pressing \'OK\' below, you agree to:\n \n- Not add any photographs with explicit, illegal or personal content.\n \n- Not add photographs that are too obscure, or photographs of places that are overly hard to reach.\n \n- Others being able to see your photographs, and your photographs and coordinates being sent to a central server over an insecure connection.</string>
    <string name="title_activity_first_time">Welcome!</string>
    <string name="title_activity_explore_grid">Nearby locations</string>
    <string name="title_activity_explore_location">Location</string>
    <string name="title_activity_location_found">Found it!</string>
    <string name="title_activity_report_location">Report picture</string>
    <string name="title_activity_location_reported">Picture reported</string>
    <string name="title_activity_add_location">Add a location</string>
    <string name="title_activity_location_added">Location added!</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_terms">Terms</string>
    <string name="title_activity_choose_player">Choose your player!</string>

</resources>
