<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E0E0E0"
    android:orientation="vertical"
    tools:context="${relativePackage}.${activityClass}" >

    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_margin="15dp"
        android:padding="15dp"
        android:background="@drawable/card_background"
        android:text="@string/main_menu_explore"
        android:onClick="gotoExploreMenu" />
    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="15dp"
        android:padding="15dp"
        android:background="@drawable/card_background"
        android:text="@string/main_menu_add_location" />
    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="15dp"
        android:padding="15dp"
        android:background="@drawable/card_background"
        android:text="@string/main_menu_about" />

</LinearLayout>
