<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E0E0E0"
    tools:context="${relativePackage}.${activityClass}" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="center"
	    android:gravity="center"
	    android:layout_margin="15dp"
	    android:padding="15dp"
	    android:background="@drawable/card_background"
	    android:fillViewport="true" >
    
        <EditText
            android:id="@+id/add_location_edit_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/add_location_enter_name"
            android:singleLine="true" />
            
		<ImageView
		    android:id="@+id/add_location_photo"
		    android:layout_width="wrap_content"
		    android:layout_height="0dp"
		    android:layout_weight="6"
		    android:layout_gravity="center"
		    android:gravity="center"
		    android:layout_marginTop="15dp"
		    android:layout_marginBottom="5dp" />
		
		<TextView
		    android:id="@+id/add_location_location_text"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content" />

		<Button
		    android:id="@+id/add_location_take_photo_button"
	        android:layout_width="match_parent"
	        android:layout_height="0dp"
	        android:layout_weight="2"
	        android:layout_gravity="center"
	        android:gravity="center"
	        android:layout_margin="15dp"
	        android:enabled="false"
	        android:text="@string/add_location_take_photo"
	        android:onClick="takePhotograph" />
		
	    <Button
	        android:id="@+id/add_location_add_location_button"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center"
	        android:gravity="center"
	        android:layout_marginLeft="15dp"
	        android:layout_marginRight="15dp"
	        android:layout_marginBottom="15dp"
	        android:text="@string/add_location_add_location"
	        android:enabled="false"
	        android:onClick="gotoLocationAdded" />
    
    </LinearLayout>

</LinearLayout>